-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.3
-
90790ef23bb148b4ac4c055bd3c11153b4c9a502 (qt/qtdeclarative/dev)
"qmllint" (qtdeclarative/e9bdafcfad0f09d15b710a3bca5acae2604c14bc) reports:
Warning: Test.qml:7:14: Property "hasOwnProperty" not found on type "Item"
if (myItem.hasOwnProperty('isChecked')) {
^^^^^^^^^^^^^^
for such code:
import QtQuick 2.15 Item { id: myItem Component.onCompleted: { if (myItem.hasOwnProperty('isChecked')) { console.log(true); } else { console.log(false); } } }
"qml" executes such code just fine.
| For Gerrit Dashboard: QTBUG-99025 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 385142,5 | V4 Lookup: Do not leak property caches | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 385548,3 | V4 Lookup: Do not leak property caches | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 386414,8 | Move QObject and QQmlComponent into builtins | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |