src/qml/jsruntime/qv4qmlcontext.cpp
@@ -305,15 +305,12 @@ ReturnedValue QQmlContextWrapper::getPropertyAndBase(const QQmlContextWrapper *r
                 if (base)
                     *base = QV4::QObjectWrapper::wrap(v4, scopeObject);
 
-                if (lookup && propertyData) {
+                if (lookup && propertyData && lookup->qmlContextPropertyGetter
+                        != QQmlContextWrapper::lookupScopeObjectProperty) {
                     QQmlData *ddata = QQmlData::get(scopeObject, false);
                     if (ddata && ddata->propertyCache) {
                         ScopedValue val(scope, base ? *base : Value::fromReturnedValue(QV4::QObjectWrapper::wrap(v4, scopeObject)));
-                        const QObjectWrapper *That = static_cast<const QObjectWrapper *>(val->objectValue());
-                        lookup->qobjectLookup.ic = That->internalClass();
-                        lookup->qobjectLookup.propertyCache = ddata->propertyCache.data();
-                        lookup->qobjectLookup.propertyCache->addref();
-                        lookup->qobjectLookup.propertyData = propertyData;
+                        QV4::setupQObjectLookup(lookup, ddata, propertyData, val->objectValue());
                         lookup->qmlContextPropertyGetter = QQmlContextWrapper::lookupScopeObjectProperty;
                     }
                 }
@@ -340,14 +337,12 @@ ReturnedValue QQmlContextWrapper::getPropertyAndBase(const QQmlContextWrapper *r
                 if (propertyData) {
                     if (lookup) {
                         QQmlData *ddata = QQmlData::get(contextObject, false);
-                        if (ddata && ddata->propertyCache) {
+                        if (ddata && ddata->propertyCache
+                                && lookup->qmlContextPropertyGetter != contextGetterFunction) {
                             ScopedValue val(scope, base ? *base
                                                         : Value::fromReturnedValue(QV4::QObjectWrapper::wrap(v4, contextObject)));
-                            const QObjectWrapper *That = static_cast<const QObjectWrapper *>(val->objectValue());
-                            lookup->qobjectLookup.ic = That->internalClass();
-                            lookup->qobjectLookup.propertyCache = ddata->propertyCache.data();
-                            lookup->qobjectLookup.propertyCache->addref();
-                            lookup->qobjectLookup.propertyData = propertyData;
+                            QV4::setupQObjectLookup(lookup, ddata, propertyData,
+                                                    val->objectValue());
                             lookup->qmlContextPropertyGetter = contextGetterFunction;
                         }
                     } else if (originalLookup) {
