src/qml/qml/qqml.cpp
@@ -886,12 +886,7 @@ static bool initObjectLookup(
 
     Q_ASSERT(ddata->propertyCache);
 
-    if (l->qobjectLookup.propertyCache)
-        l->qobjectLookup.propertyCache->release();
-
-    l->qobjectLookup.propertyCache = ddata->propertyCache.data();
-    l->qobjectLookup.propertyCache->addref();
-    l->qobjectLookup.propertyData = property;
+    QV4::setupQObjectLookup(l, ddata, property);
     return true;
 }
 
